# colcon-python-setup-py

./: .travis.yml  README.rst  appveyor.yml  setup.cfg  stdeb.cfg
colcon_python_setup_py/: __init__.py
colcon_python_setup_py/package_augmentation/: python_setup_py.py
colcon_python_setup_py/package_identification/: out_of_process.py  python_setup_py.py  run_setup_py.py
test/: spell_check.words  test_flake8.py  test_package_identification_python_setup_py.py  test_spell_check.py
