[metadata]
name = colcon-python-setup-py
version = attr: colcon_python_setup_py.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-python-setup-py/milestones?state=closed
    GitHub = https://github.com/colcon/colcon-python-setup-py/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support Python packages with the metadata in the setup.py file.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core>=0.3.10
  setuptools
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[tool:pytest]
filterwarnings =
    error
junit_suite_name = colcon-python-setup-py

[options.entry_points]
colcon_core.package_identification =
    python_setup_py = colcon_python_setup_py.package_identification.python_setup_py:PythonPackageIdentification

[flake8]
import-order-style = google
